--- a/changelog
+++ b/changelog
@@ -1,192 +1,5 @@
-commit da6f6871180c026d3725b7c9627bec847c782074 (HEAD -> master, origin/master)
+commit 893ac4d08ea375a9e7890137abef0829c55f2817 (HEAD -> master, origin/master)
 Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Fri Apr 20 09:40:29 2018 -0400
+Date:   Mon Jul 16 09:19:02 2018 -0400
 
-    * bugfix
-
-commit f5720ede4236261550e3b337dfc7ee0de21f240e
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Fri Apr 20 09:38:03 2018 -0400
-
-    * changelog
-
-commit 0868e6dc9cea55bc7640fd02fc4c0014b89ab1f9
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Fri Apr 20 09:37:19 2018 -0400
-
-    * se inicializa como demonio
-    * se coloca la opcion para detener el proceso
-
-commit 6ff84a7753f7bf57567511f40b6e93ed04d88ab6
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Fri Apr 20 08:27:49 2018 -0400
-
-    * changelog
-
-commit 191658061836b4d131aecee39c8a40c3f12a1b94
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Fri Apr 20 08:27:22 2018 -0400
-
-    * se agrega no cache como parametro al cargar la vpn
-
-commit c371f96afe2b6dc3fa10f35495da752ac47f84c5
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 11 16:11:37 2018 -0400
-
-    * changelog
-
-commit 2ff259a75cb76da120c07c89c14fbc8356b3e082
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 11 16:11:30 2018 -0400
-
-    * bugfix
-
-commit 08c37268081d02284f3ee9b5d1e4bff2398421cc (tag: v1.1)
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Fri Apr 6 13:42:05 2018 -0400
-
-    * changelog
-
-commit 1bef3a8ccf1824a0016058af64bd920abda38438
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Fri Apr 6 13:41:56 2018 -0400
-
-    * bugfix
-
-commit 97a7698068210d35d7a7e4c8fc3d4fd1dc29dc86
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Thu Apr 5 12:17:20 2018 -0400
-
-    * changelog
-
-commit e1c175620e1dad05310e2d52d1018a680fe41ca4
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Thu Apr 5 12:16:50 2018 -0400
-
-    * se elimina la comprobacion de instalacion por dar problemas en algunas versiones de ubuntu
-
-commit 52d95829323c54be73ddee669967c0b523255289
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 14:43:54 2018 -0400
-
-    * changelog
-
-commit 3459183e44f448b6147885e35ceab1633b50b9c7
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 14:43:40 2018 -0400
-
-    * se agrega una comprobacion de contenido de variable
-
-commit a208b8b90d82b927591f9386eb72a2a12d262596
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 14:37:36 2018 -0400
-
-    * changelog
-
-commit 3da1c7d3b541197e10107e14762d363500d4569d
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 14:37:22 2018 -0400
-
-    * bugfix
-
-commit b98b71c9b5da982d03c22cb4a956504b0ee1cae0
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 13:26:23 2018 -0400
-
-    * changelog
-
-commit f0a783ec1ba43ed762f6228e468883724d699d36
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 13:26:16 2018 -0400
-
-    * comentario
-
-commit 8f8445eb6da37c35b26f14ffae50e0c679c7eb7e
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 13:25:20 2018 -0400
-
-    * changelog
-
-commit 6426e6370dbfa7d244d85608d6c9d9028c5fcc7a
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 13:24:59 2018 -0400
-
-    * bugfix
-
-commit 0bcf19036d7441f6f2fbec05f3e80c5aa99cf06d
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 13:24:35 2018 -0400
-
-    * se agrega un readme
-
-commit 2d9deb9ecb31e81109ef97942d434db2e73f98a0
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:43:24 2018 -0400
-
-    * changelog
-
-commit 4cac7a54b1700ab2a3f47ca96ff82578426a267b
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:43:17 2018 -0400
-
-    * bugfix
-
-commit 789b9fb5a963425e4341e1da6a078618752e9421 (tag: v1.0)
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:35:38 2018 -0400
-
-    * changelog
-
-commit cf0225f1f4649bc602e969ca7c28a0271147a131
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:35:26 2018 -0400
-
-    * se coloca comprobacion de instalacion
-
-commit 5c2661c7bcc594d7d83b88f80d1afa92e5ffea88
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:24:51 2018 -0400
-
-    * changelog
-
-commit 9c4b9bc733850c92d715aa79ebdfbf114769a579
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:24:38 2018 -0400
-
-    * finalizada la primera version
-
-commit 1086291ea915bc8bde9dca537c099991520b0ee2
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:13:43 2018 -0400
-
-    * changelog
-
-commit e9e90c9f83f259807e4eb4b7ccd70fde2067619e
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:13:30 2018 -0400
-
-    * se colocan los primeros pasos
-
-commit debddfa29dc7793b26a0bc18d2fb49dbbec12b2f
-Author: Jesus Palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:04:14 2018 -0400
-
-    Agregar LICENSE
-
-commit 5959976ef110b82e6f1cb9febdf9d8900fda2fea
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:02:54 2018 -0400
-
-    * bugfix
-
-commit 95e83f3cbf917fb56837da635675553d31eb3714
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:01:40 2018 -0400
-
-    * changelog
-
-commit 0754389bd361d5060f9835e79ba7fb79d616eb7f
-Author: jesus palencia <jesus.palencia@grupopro.com.ve>
-Date:   Wed Apr 4 11:01:29 2018 -0400
-
-    * primer commit
+    * primer
