--- a/changelog
+++ b/changelog
@@ -1,4 +1,10 @@
-commit 373c898ff5a41173a477e88e7b1db47363b176cf (HEAD -> master, origin/master, origin/HEAD)
+commit 197f029a5137eb0056a4c584335bb375848b3834 (HEAD -> master, origin/master, origin/HEAD)
+Author: config <Palencia>
+Date:   Mon Jul 6 22:04:39 2020 -0400
+
+    * changelog
+
+commit 373c898ff5a41173a477e88e7b1db47363b176cf
 Author: jose perez <sinfallas@gmail.com>
 Date:   Mon Apr 27 16:50:51 2020 -0400
 
