--- a/changelog
+++ b/changelog
@@ -1,4 +1,10 @@
-commit 197f029a5137eb0056a4c584335bb375848b3834 (HEAD -> master, origin/master, origin/HEAD)
+commit b3d0b9b7a33b07a9ec845dd233795f96f0418c29 (HEAD -> master, origin/master, origin/HEAD)
+Author: Jesus <sinfallas@gmail.com>
+Date:   Sun Jan 31 16:06:34 2021 -0400
+
+    * changelog
+
+commit 197f029a5137eb0056a4c584335bb375848b3834
 Author: config <Palencia>
 Date:   Mon Jul 6 22:04:39 2020 -0400
 
